fixed footer and main overflow issue

--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
     background-color: var(--celadon);
 }
 
@@ -27,6 +28,7 @@ header {
     /* can use either % or dvw, does the same thing in this case */
     width: 100%;
     text-align: center;
+
     display:flex;
     flex-direction: column;
     justify-content: center;
@@ -34,6 +36,8 @@ header {
 }
 
 nav {
+    margin-top: 0.5em;
+
     display: flex;
     justify-content: center;
     align-items: center;
@@ -47,6 +51,7 @@ nav > a {
     border-radius: 5em;
     width: 19dvw;
     height: 4dvh;
+
     display: flex;
     justify-content: center;
     align-items: center;
@@ -62,26 +67,37 @@ footer {
     height: 5dvh;
     width: 100dvw;
     text-align: center;
+
+    display: flex;
+	justify-content: center;
+	align-items: center;
+	align-self: flex-end;
 }
 
 main {
-    height: 85dvh;
-    width: 100dvw;
+    min-height: 85dvh;
+    width: 100%;
+    text-align: center;
+
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
 
 main > * {
-    margin: 1em;
+    margin: 0.7em;
 }
 
 main > img {
-    height: 40dvh;
+    height: 45dvw;
     /* if adding a specific width, can use object-fit so image is not skewed depending on screen size */
-    width: 80dvw;
+    width: auto;
     object-fit: contain;
+}
+
+main > p {
+    font-size: small;
 }
 
 main > h1 {
@@ -92,7 +108,7 @@ main > h1 {
     background-color: var(--dutch-white);
     border: 0.2em solid wheat;
     padding: 0.5dvh;
-    font-size:medium;
+    font-size: medium;
 }
 
 #home-button:hover {
